@@ -323,7 +323,7 @@ contains
     use glimmer_map_cfproj
     use glimmer_map_types
     use glimmer_log
-    use paramets, only: len0
+    use glimmer_paramets, only: len0
     use glimmer_filenames
     implicit none
     type(glimmer_nc_input), pointer :: infile
