@@ -70,7 +70,7 @@ contains
   !> calculate scale factors (can't have non-integer powers)
   subroutine glimmer_init_scales
     use physcon, only : scyr, gn
-    use paramets, only : thk0, tim0, vel0, vis0, len0, tau0, acc0
+    use glimmer_paramets, only : thk0, tim0, vel0, vis0, len0, tau0, acc0
     implicit none
 
     scale2d_f1 = scyr * thk0 / tim0
